# python-intermediate-inflammation

./: .gitignore  .pylintrc  LICENSE  Makefile  README.md  checkData.py  checking data  examples.py  inflammation-analysis.py  inflammation_analysis.py  new_feature.py  patientdb.py  pyproject.toml  requirements.txt  test.ipynb  test.txt  test_file.txt
.github/workflows/: main.yml
data/: inflammation.json
inflammation/: __init__.py  compute_data.py  controller.py  models.py  patient.py  test.yml  views.py
tests/: test_Overall.py  test_compute_data.py  test_file  test_models.py  test_patient.py
